# trash

./: 3Dc.cpp  AverageValue.java  BitMagic.java  CMakeLists.txt  ColorTemperature.java  ContrastEnhancement.java  Cos.java  DeltaSigmaModulation.java  EM.java  FocusTraverse.java  HMM.java  HRTF.cpp  HatenaB.java  HilbertScan.java  HyperLogLog.cu  ImplicitSpringSolver.java  InsidePolygon.java  InsideTriangle.java  PID.java  Parallel.java  ProbabilityMassFunction.java  ProbabilityMassFunctionParametersEstimation.java  RGBE_encode.cpp  RadixHeapDouble.java  Raymatcher.cpp  SHRM.cpp  Talk2ch.java  Turing.java  aka.hpp  astar.cpp  atomic_file_sytem.cpp  atomic_file_sytem.java  autorun.inf  avi.cpp  bandwidthTest.cpp  bilateral_filter.cpp  binary_indexed_tree.cpp  bit_magic.cpp  bitrol.cpp  bitsubset.cpp  (+82 more)
backpropagation/: backpropagation.cpp  backpropagation.hpp  main.cpp
concurrent/: pthread.hpp
cuda/: checkgpudirect.cu  cudaEventTest.cu  fast_expd.cu  gaussian_elimination.cu  testgpudirect.cu  testgpudirect2.cu  transpose_matrix.cu  warp_serialize.cu
deeplearning/: AdaptiveRegularizationOfWeightVectors.cpp  Autoencoder.java  AveragedPerceptron.cpp  OnlineLearning.hpp  PassiveAggressive.cpp  SoftConfidenceWeightedLearning.cpp  denoising_autoencoder.cpp  maximum_entropy_method.cpp  maxout_svm.cpp  nmf.cpp  rbm.cpp  softmax.cpp
geom/: bounding_sphere_of_triangle.cpp  ray_box_intersection.cpp
graph/: floyd_warshall.cpp
lang/: test_CollatzConjecture.cpp  test_block.cpp  test_cat_log_reverse.cpp  test_copy_constructor.cpp  test_dft.cpp  test_dijkstra.cpp  test_lambda.cpp  (+10 more)
(+6 files in other folders)
