CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(pgc-renderer CXX C)

SET(CMAKE_CXX_COMPILER mpic++)
SET(CMAKE_C_COMPILER $ENV{CUDA_BIN_PATH}/nvcc)

INCLUDE_DIRECTORIES($ENV{CUDA_INC_PATH})
LINK_DIRECTORIES($ENV{CUDA_LIB_PATH})

SET(SRCS_CXX mpi.cpp)
SET(SRCS_CU kernel.cu)
SET_SOURCE_FILES_PROPERTIES(${SRCS_CU} PROPERTIES LANGUAGE C)
SET(SRCS ${SRCS_CXX} ${SRCS_CU})

SET(CMAKE_C_FLAGS "-maxrregcount=0 --machine 64 --compile -gencode arch=compute_20,code=sm_20 --ptxas-options=-v")
SET(CMAKE_C_FLAGS_DEBUG   "-D_DEBUG --compile \"-O2\"")
SET(CMAKE_C_FLAGS_RELEASE "-DNDEBUG --compile \"-O3\"")

ADD_EXECUTABLE(pgc-renderer ${SRCS})
TARGET_LINK_LIBRARIES(pgc-renderer cudart)
